--- a/altgis.html
+++ b/altgis.html
@@ -20,7 +20,7 @@
   </style>
 
 
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAO0RVwGFeucGLK2Bcstf5aUsWXLi-jmYM"></script>
 
 
     <script type="text/javascript">
