--- a/altgis.html
+++ b/altgis.html
@@ -64,7 +64,7 @@ var mapStyle = [{"featureType":"all","elementType":"all","stylers":[{"hue":"#ff0
 
 //kml layer...
 var kmlLayer = new google.maps.KmlLayer({
-    url: 'geodata/dists.kml',
+    url: './geodata/dists.kml',
  //   preserveViewport: true,
     clickable: false,
     suppressInfoWindows: true
