--- a/altgis.html
+++ b/altgis.html
@@ -64,7 +64,7 @@ var mapStyle = [{"featureType":"all","elementType":"all","stylers":[{"hue":"#ff0
 
 //kml layer...
 var kmlLayer = new google.maps.KmlLayer({
-    url: 'dists.kml',
+    url: 'https://dl.dropboxusercontent.com/u/20302112/dists.kml',
  //   preserveViewport: true,
     clickable: false,
     suppressInfoWindows: true
