--- a/altgis.html
+++ b/altgis.html
@@ -229,17 +229,11 @@ function errorPosition() {
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
   <span class="caret"></span></button>
   <ul class="dropdown-menu">
-    <li><a href="#">HTML</a></li>
-    <li><a href="#">CSS</a></li>
-    <li><a href="#">JavaScript</a></li>
+    <li><input type="checkbox" name="toggle" checked="checked" value="Paranormal"> <img src="icons/Paranormal.png" width="25px"> Sites of Paranormal Activity</li>
+    <li><input type="checkbox" name="toggle"  value="Mythical"> <img src="icons/Mythical.png" width="25px"> Mythical Beasts</li>
   </ul>
 </div>
-<form action="">
-<input type="checkbox" name="toggle" checked="checked" value="Paranormal"> <img src="icons/Paranormal.png" width="25px"> Sites of Paranormal Activity<br>
-<input type="checkbox" name="toggle"  value="Mythical"> <img src="icons/Mythical.png" width="25px"> Mythical Beasts<br>
 
-
-</form>
 </div>
 
 
