--- a/altgis.html
+++ b/altgis.html
@@ -226,9 +226,10 @@ function errorPosition() {
 <div id="map-canvas"></div>
 <div id="legend">
   <div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">List of Layers
   <span class="caret"></span></button>
   <ul class="dropdown-menu">
+    <li class="dropdown-header">Paranormal Layers</li>
     <li><input type="checkbox" name="toggle" checked="checked" value="Paranormal"> <img src="icons/Paranormal.png" width="25px"> Sites of Paranormal Activity</li>
     <li><input type="checkbox" name="toggle"  value="Mythical"> <img src="icons/Mythical.png" width="25px"> Mythical Beasts</li>
   </ul>
