--- a/altgis.html
+++ b/altgis.html
@@ -13,7 +13,6 @@
     html, body {height: 100%;}
     #map-canvas{width:100%; height:100px;}
     .navbar{border-radius:0px;padding:0px;margin:0px;}
-    #legend {margin:10px;padding:10px;background-color:white;border: 1px solid black;}
     #content {width:450px;}
     #content img{float:left; padding-right:10px;}
     #content h4{background-color:grey; padding:5px;color:#FFFFFF;}
@@ -58,7 +57,7 @@ var mapStyle = [{"featureType":"all","elementType":"all","stylers":[{"hue":"#ff0
         map = new google.maps.Map(document.getElementById('map-canvas'),
             mapOptions);
 
-        map.controls[google.maps.ControlPosition.RIGHT_TOP].push(document.getElementById('legend'));
+        map.controls[google.maps.ControlPosition.LEFT_TOP].push(document.getElementById('legend'));
 
         markerPop();
 
