--- a/altgis.html
+++ b/altgis.html
@@ -16,7 +16,7 @@
     #content {width:450px;}
     #content img{float:left; padding-right:10px;}
     #content h4{background-color:grey; padding:5px;color:#FFFFFF;}
-    #legend{margin-left:10px;}
+    #legend{padding-left:10px;}
   </style>
 
 
