--- a/altgis.html
+++ b/altgis.html
@@ -17,6 +17,7 @@
     #content img{float:left; padding-right:10px;}
     #content h4{background-color:grey; padding:5px;color:#FFFFFF;}
     #legend{padding-left:10px;}
+    #legend div{padding-left:5px;}
   </style>
 
 
