--- a/altgis.html
+++ b/altgis.html
@@ -225,6 +225,11 @@ function errorPosition() {
 
 <div id="map-canvas"></div>
 <div id="legend">
+  <button data-toggle="collapse" data-target="#demo">Collapsible</button>
+
+<div id="demo" class="collapse">
+Lorem ipsum dolor text....
+</div>
   <div class="dropdown">
   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">List of Layers
   <span class="caret"></span></button>
