--- a/altgis.html
+++ b/altgis.html
@@ -231,7 +231,7 @@ function errorPosition() {
 Lorem ipsum dolor text....
 </div>
   <div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">List of Layers
+  <button class="btn btn-info" type="button" data-toggle="dropdown">List of Layers
   <span class="caret"></span></button>
   <ul class="dropdown-menu">
     <li class="dropdown-header">Paranormal Layers</li>
