--- a/altgis.html
+++ b/altgis.html
@@ -225,7 +225,7 @@ function errorPosition() {
 
 <div id="map-canvas"></div>
 <div id="legend">
-  <button data-toggle="collapse" data-target="#demo">Collapsible</button>
+  <button type="button" data-toggle="collapse" data-target="#demo">Collapsible</button>
 
 <div id="demo" class="collapse">
 Lorem ipsum dolor text....
