--- a/altgis.html
+++ b/altgis.html
@@ -227,7 +227,7 @@ function errorPosition() {
 <div id="legend">
   <button class ="btn btn-info" type="button" data-toggle="collapse" data-target="#demo">Collapsible</button>
 
-<div id="demo" class="collapse">
+<div id="demo" class="panel-group">
 Lorem ipsum dolor text....
 </div>
   <div class="dropdown">
