--- a/altgis.html
+++ b/altgis.html
@@ -227,9 +227,10 @@ function errorPosition() {
 <div id="legend">
   <button class ="btn btn-info" type="button" data-toggle="collapse" data-target="#demo">Collapsible</button>
 
-<div id="demo" class="panel-group">
+<div id="demo" class="collapse">
+<Div class="panel">
 Lorem ipsum dolor text....
-</div>
+</div></div>
   <div class="dropdown">
   <button class="btn btn-info" type="button" data-toggle="dropdown">List of Layers
   <span class="caret"></span></button>
