--- a/altgis.html
+++ b/altgis.html
@@ -225,26 +225,13 @@ function errorPosition() {
 
 <div id="map-canvas"></div>
 <div id="legend">
-  <button class ="btn btn-info" type="button" data-toggle="collapse" data-target="#demo">Collapsible</button>
-
-<div id="demo" class="collapse">
-<Div class="panel">
-Lorem ipsum dolor text....
-</div></div>
-  <div class="dropdown">
-  <button class="btn btn-info" type="button" data-toggle="dropdown">List of Layers
-  <span class="caret"></span></button>
-  <ul class="dropdown-menu">
-    <li class="dropdown-header">Paranormal Layers</li>
-    <li><input type="checkbox" name="toggle" checked="checked" value="Paranormal"> <img src="icons/Paranormal.png" width="25px"> Sites of Paranormal Activity</li>
-    <li><input type="checkbox" name="toggle"  value="Mythical"> <img src="icons/Mythical.png" width="25px"> Mythical Beasts</li>
-  </ul>
-</div>
-
-</div>
-
-
-
+    <div id="demo" class="collapse">
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
+<input type="checkbox" name="toggle" checked="checked" value="Paranormal"> <img src="icons/Paranormal.png" width="25px"> Sites of Paranormal Activity<br />
+<input type="checkbox" name="toggle"  value="Mythical"> <img src="icons/Mythical.png" width="25px"> Mythical Beasts
+  </div>
+  </div>
+ 
 
 
 <script>
