--- a/altgis.html
+++ b/altgis.html
@@ -227,8 +227,13 @@ function errorPosition() {
 <div id="legend">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Layers <span class="caret"></span> </button>
     <div id="demo" class="collapse">
-<input type="checkbox" name="toggle" checked="checked" value="Paranormal"> <img src="icons/Paranormal.png" width="25px"> Sites of Paranormal Activity<br />
-<input type="checkbox" name="toggle"  value="Mythical"> <img src="icons/Mythical.png" width="25px"> Mythical Beasts
+      <ul class="list-group">
+  <li class="list-group-item"><input type="checkbox" name="toggle" checked="checked" value="Paranormal"> <img src="icons/Paranormal.png" width="25px"> Sites of Paranormal Activity</li>
+  <li class="list-group-item"><input type="checkbox" name="toggle"  value="Mythical"> <img src="icons/Mythical.png" width="25px"> Mythical Beasts</li>
+  <li class="list-group-item">Third item</li>
+</ul>
+
+
   </div>
   </div>
  
