--- a/altgis.html
+++ b/altgis.html
@@ -16,7 +16,7 @@
     #content {width:450px;}
     #content img{float:left; padding-right:10px;}
     #content h4{background-color:grey; padding:5px;color:#FFFFFF;}
-    #legend{padding-left:10px;padding-top:10px;padding-bottom:5px;}
+    #legend{padding-left:10px;margin-top:10px;margin-bottom:5px;}
 
   </style>
 
