--- a/altgis.html
+++ b/altgis.html
@@ -16,8 +16,8 @@
     #content {width:450px;}
     #content img{float:left; padding-right:10px;}
     #content h4{background-color:grey; padding:5px;color:#FFFFFF;}
-    #legend{padding-left:10px;margin-top:10px;margin-bottom:5px;}
-
+    #legend{padding-left:10px;margin-top:10px;}
+    #legend div{margin-top:5px;}
   </style>
 
 
@@ -234,7 +234,7 @@ function errorPosition() {
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Layers <span class="caret"></span> </button>
     <div id="demo" class="collapse">
       <ul class="list-group">
-  <li class="list-group-item"><input type="checkbox" name="toggle" checked="checked" value="Paranormal"> <img src="icons/Paranormal.png" width="25px"> Sites of Paranormal Activity</li>
+  <li class="list-group-item"><input type="checkbox" name="toggle" checked="checked" value="Paranormal">  Sites of Paranormal Activity <img src="icons/Paranormal.png" width="25px"></li>
   <li class="list-group-item"><input type="checkbox" name="toggle"  value="Mythical"> <img src="icons/Mythical.png" width="25px"> Mythical Beasts</li>
   <li class="list-group-item">Third item</li>
 </ul>
