--- a/altgis.html
+++ b/altgis.html
@@ -232,9 +232,9 @@ function errorPosition() {
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Layers <span class="caret"></span> </button>
     <div id="demo" class="collapse">
       <ul class="list-group">
-  <li class="list-group-item"><input type="checkbox" name="toggle" checked="checked" value="Ghost">  Ghost Sightings <img src="icons/Paranormal.png" width="25px"></li>
-  <li class="list-group-item"><input type="checkbox" name="toggle" checked="checked" value="Cursed">  Cursed Land <img src="icons/Paranormal.png" width="25px"></li>
-  <li class="list-group-item"><input type="checkbox" name="toggle"  value="Mythical"> Mythical Beasts <img src="icons/Mythical.png" width="25px"></li>
+  <li class="list-group-item"><input type="checkbox" name="toggle" checked="checked" value="Ghost">  <img src="icons/Ghost.png" width="25px">  Ghost Sightings</li>
+  <li class="list-group-item"><input type="checkbox" name="toggle" checked="checked" value="Cursed">  <img src="icons/Cursed.png" width="25px">  Cursed Land</li>
+  <li class="list-group-item"><input type="checkbox" name="toggle"  value="Mythical"> <img src="icons/Mythical.png" width="25px">  Mythical Beasts</li>
 
 </ul>
 
