--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 <img class='din' id='din6' src='dinos/din6.png' />
 <img class='din' id='din7' src='dinos/din7.png' />
 <img class='din' id='din8' src='dinos/din8.png' />
+<img class='din' id='plane' src='dinos/plane.png' />
+<img class='din' id='tank' src='dinos/tank.png' />
+<img class='din' id='tank2' src='dinos/tank2.png' />
+<img class='din' id='plane2' src='dinos/plane2.png' />
 <img src='dinos/nom.png' />
 </div>
 <script>
