--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@ var data = [
 [22,"sub1","Coloured by Elliott 28th November 2022"],
 [23,"skel1a","Skeleton"],
 [24,"skel2","Skeleton"],
-[24,"skel3","Skeleton Leader"]
+[25,"skel3","Skeleton Leader"],
+[26,"skel4","Skeleton"],
+[27,"skel5","Skeleton Archer"]
 ];
 
 var osm = new L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: '&copy; OpenStreetMap',maxZoom: 18})
