--- a/dinomap.html
+++ b/dinomap.html
@@ -95,7 +95,8 @@ var data = [
 [26,"skel4","Skeleton"],
 [27,"skel5","Skeleton Archer"],
 [28,"fossil1","Austen's Fossil"],
-[29,"fossil2","Austen's Fossil"]
+[29,"fossil2","Austen's Fossil"],
+[30,"eship1","Elliott's Ship"]
 
 ];
 
