--- a/dinomap.html
+++ b/dinomap.html
@@ -96,7 +96,8 @@ var data = [
 [27,"skel5","Skeleton Archer"],
 [28,"fossil1","Austen's Fossil"],
 [29,"fossil2","Austen's Fossil"],
-[30,"eship1","Elliott's Ship"]
+[30,"eship1","Elliott's Ship"],
+[31,"eship2","Elliott's Ship"]
 
 ];
 
