--- a/dinomap.html
+++ b/dinomap.html
@@ -97,7 +97,8 @@ var data = [
 [28,"fossil1","Austen's Fossil"],
 [29,"fossil2","Austen's Fossil"],
 [30,"eship1","Elliott's Ship"],
-[31,"eship2","Elliott's Ship"]
+[31,"eship2","Elliott's Ship"],
+[32,"eship3","Elliott's Ship"]
 
 ];
 
