--- a/dinomap.html
+++ b/dinomap.html
@@ -98,7 +98,8 @@ var data = [
 [29,"fossil2","Austen's Fossil"],
 [30,"eship1","Elliott's Ship"],
 [31,"eship2","Elliott's Ship"],
-[32,"eship3","Elliott's Ship"]
+[32,"eship3","Elliott's Ship"],
+[33,"eship4","Elliott's Ship"]
 
 ];
 
